# fastapi-llamaindex-chatbot

./: .env.example  LICENSE  README.md  pyproject.toml
configs/: config__agent.toml
src/: main.py
src/agents/: core.py
src/config/: __init__.py  lifespan.py  loader.py  settings.py
src/models/: chat.py
src/routes/: chat.py
